fix: corrigindo erros de lint

--- a/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/style.css
+++ b/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 button {
-  background-color: aquamarine;
+  background-color: rgb(255, 155, 40);
   border-radius: 10%;
   font-size: 15px;
   padding: 10px;
