--- a/1-Fundamentos/5-javascript-dom-eventos-webstorage/1-javascript-dom-e-seletores/exercicios/Seletores/style.css
+++ b/1-Fundamentos/5-javascript-dom-eventos-webstorage/1-javascript-dom-e-seletores/exercicios/Seletores/style.css
@@ -8,8 +8,8 @@
 }
 
 #header-container {
-  color: white;
-  padding: 20px;
+color: rgb(88, 88, 88);
+padding: 20px;
 }
 
 .emergency-tasks {
@@ -23,7 +23,7 @@
   height: 198px;
 }
 .emergency-tasks h3 {
-  color: white;
+  color: rgb(112, 112, 112);
   margin-top: 10px;
   padding: 10px;
 }
@@ -39,13 +39,13 @@
 }
 
 .no-emergency-tasks h3 {
-  color: white;
+  color: rgb(68, 68, 68);
   margin-top: 10px;
   padding: 10px;
 }
 
 #footer-container {
-  color: white;
+  color: rgb(46, 46, 46);
   font-weight: 700;
   padding: 15px;
   text-align: center;
