--- a/2-Front-end/2-intro-ao-react/3-projeto-solar-system/sd-029-b-project-solar-system/src/App.css
+++ b/2-Front-end/2-intro-ao-react/3-projeto-solar-system/sd-029-b-project-solar-system/src/App.css
@@ -50,14 +50,16 @@ header > h1:hover {
   transform: scale(1.02);
 }
 
-.planetNames {
+h2 {
   color: rgb(166, 211, 250);
   font-size: 1.6rem;
   margin: auto;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
   max-width: fit-content;
 }
 
-.planetNames:hover {
+h2:hover {
   color: rgb(177, 248, 84);
   text-shadow: 10px 5px 10px rgba(118, 1, 168, 0.8);
   transform: scale(1.01);
@@ -71,7 +73,7 @@ header > h1:hover {
 }
 
 .planetCard {
-  background-color: rgba(3, 92, 92, 0.5);
+  background-color: rgba(3, 92, 92, 0.7);
   border: solid 0.1rem rgb(20, 134, 134);
   border-radius: 10px;
   font-size: 1.2rem;
@@ -81,12 +83,11 @@ header > h1:hover {
 }
 
 .planetCard:hover {
-  background-color: rgba(17, 144, 144, 0.5);
+  background-color: rgb(15, 117, 117);
   border: none;
   box-shadow: 0.2rem 0.2rem 15px rgba(118, 1, 168, 0.8);
   color: rgb(154, 255, 154);
-  text-shadow: 0.5rem 0.5rem 8px rgba(1, 39, 39, 0.8);
-  transform: scale(1.04);
+  text-shadow: 0.4rem 0.4rem 1px rgb(1, 39, 39);
 }
 
 .Mercúrio {
